# Darnel-Engine

./: .gitignore  .gitmodules  CMakeLists.txt  PreLoad.cmake  README.md  run.sh
Darnel/: CMakeLists.txt
Darnel/include/: Application.h  ApplicationEvent.h  Camera.h  Core.h  CoreFramework.h  Darnel.h  Event.h  Layer.h  LayerStack.h  MouseEvent.h  OpenGL3Window.h  Renderer.h  Sprite.h  SpriteSheet.h  Texture.h  Window.h  WindowEvent.h
Darnel/include/DirectX12/: DirectX12Framework.h  DirectX12Renderer.h  DirectX12Window.h
Darnel/include/Event/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h  WindowEvent.h
Darnel/include/Graphics2D/: Entity.h  Sprite.h  SpriteSheet.h  Texture.h
Darnel/include/ImGui/: ImGuiLayer.h
Darnel/include/Layers/: CameraLayer.h  EntityLayer.h  Layer.h  LayerStack.h  StaticEntityLayer.h
Darnel/include/OpenGL3/: IndexBuffer.h  OpenGL3Context.h  OpenGL3Framework.h  OpenGL3IndexBuffer.h  OpenGL3Renderer.h  OpenGL3Shader.h  OpenGL3Sprite.h  OpenGL3Texture.h  OpenGL3VertexArray.h  OpenGL3VertexBuffer.h  OpenGL3VertexBufferLayout.h  OpenGL3Window.h  VertexArray.h  VertexBuffer.h  VertexBufferLayout.h
Darnel/include/Renderer/: GraphicsContext.h  IndexBuffer.h  Renderer.h  Shader.h  VertexArray.h  VertexBuffer.h  VertexBufferLayout.h
Darnel/src/: Application.cpp  Darnel.cpp  LayerStack.cpp  OpenGL3Framework.cpp  OpenGL3Window.cpp  Sprite.cpp  SpriteSheet.cpp  Texture.cpp  VertexArray.cpp  Window.cpp
Darnel/src/DirectX12/: DirectX12Framework.cpp  DirectX12Renderer.cpp  DirectX12Window.cpp
Darnel/src/Graphics2D/: Sprite.cpp  Texture.cpp
Darnel/src/ImGui/: ImGuiLayer.cpp
Darnel/src/Layers/: EntityLayer.cpp  LayerStack.cpp
Darnel/src/OpenGL3/: IndexBuffer.cpp  OpenGL3Context.cpp  OpenGL3Framework.cpp  OpenGL3IndexBuffer.cpp  OpenGL3Renderer.cpp  OpenGL3Shader.cpp  OpenGL3Sprite.cpp  OpenGL3Texture.cpp  OpenGL3VertexArray.cpp  OpenGL3VertexBuffer.cpp  OpenGL3VertexBufferLayout.cpp  OpenGL3Window.cpp  VertexArray.cpp  VertexBuffer.cpp  VertexBufferLayout.cpp
Darnel/src/Renderer/: IndexBuffer.cpp  Renderer.cpp  Shader.cpp  VertexArray.cpp  VertexBuffer.cpp  VertexBufferLayout.cpp
OpenGL3Lib/: CMakeLists.txt
OpenGL3Lib/include/: IndexBuffer.h  Texture.h  VertexArray.h
OpenGL3Lib/include/OpenGL3Lib/: Renderer.h  Texture.h  VertexArray.h  VertexBufferLayout.h
OpenGL3Lib/src/: IndexBuffer.cpp  Renderer.cpp  Shader.cpp  Texture.cpp  VertexArray.cpp  VertexBuffer.cpp  VertexBufferLayout.cpp
Renderer/: CMakeLists.txt
Renderer/include/: Renderer.h  Shader.h  Texture.h  VertexBuffer.h  VertexBufferLayout.h
Renderer/src/: Renderer.cpp  Texture.cpp
SampleDX12/: CMakeLists.txt
SampleDX12/include/: Camera.h  Light.h  Material.h  SampleDX12.h
SampleDX12/src/: SampleDX12.cpp  main.cpp
SampleOpenGL3/: CMakeLists.txt
SampleOpenGL3/include/: TestClearColor.h  TestDraw.h  TestTexture2d.h
SampleOpenGL3/resources/shaders/: Texture.shader
SampleOpenGL3/src/: Application.cpp  TestClearColor.cpp  TestDraw.cpp  TestTexture2d.cpp
Tests/: CMakeLists.txt
Tests/include/: Level.h  PlayerCamera.h  Test.h  TestApp.h  TestCamera.h  TestClearColor.h  TestDraw.h  TestLayer.h  TestLevel.h  TestMultiWindow.h  TestPlayer.h  TestSprite.h  TestSpriteSheet.h
Tests/resources/shaders/: Basic.shader
Tests/src/: Application.cpp  Test.cpp  TestCamera.cpp  TestClearColor.cpp  TestDraw.cpp  TestLevel.cpp  TestMultiWindow.cpp  TestPlayer.cpp  TestSprite.cpp  TestSpriteSheet.cpp  TestTexture2d.cpp  dx12_main.cpp  main.cpp
